--- a/index-2.html
+++ b/index-2.html
@@ -13,7 +13,7 @@
         height: 100vh;
         margin: 0;
         font-family: Garamond, sans-serif;
-        background-image: url('IMG_1845.JPEG');
+        background: white;
         color: black;
     }
 
